--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
-    "@supabase/supabase-js": "^2.90.1",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.91.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
-    "next-auth": "^4.24.13",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
